--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "tailwind": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.9",
     "autoprefixer": "^10.4.8",
     "flowbite": "^1.5.2",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-typing-animation": "^1.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-typing-animation": "^1.6.3",
     "@vitejs/plugin-react": "^2.0.0",
+    "react-router-dom": "^6.8.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
