--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "autoprefixer": "^10.4.8",
+    "babel-runtime": "^6.26.0",
     "flowbite": "^1.5.2",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
